[package]
name = "cdcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.0"
either = "1.8"
env_logger = "0.10.0"
log = "0.4.17"

[lib]
name = "cdcl_lib"
path = "src/lib.rs"

# [[bin]]
# name = "dimacs"
# path = "src/bin/dimacs.rs"
# 
# [[bin]]
# name = "main"
# path = "src/bin/main.rs"
