[package]
name = "cdcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
fastrand = "1.8.0"
clap = { version = "4.0.32", features = ["derive"] }
cpu-time = "1.0.0"
procfs = "0.14.2"

[lib]
name = "cdcl_lib"
path = "src/lib.rs"

[profile.release]
debug = false
lto = true
opt-level = 3
